objects/FlightBooking1__c.object
<CustomObject>
    <fields>
        <fullName>Depart_date__c</fullName>
        <label>Depart date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Sangli</fullName>
                </value>
                <value>
                    <fullName>Nagpur</fullName>
                </value>
                <value>
                    <fullName>Nashik</fullName>
                </value>
                <value>
                    <fullName>Paris</fullName>
                </value>
                <value>
                    <fullName>Londan</fullName>
                </value>
                <value>
                    <fullName>NewYork</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_trav__c</fullName>
        <label>No of trav</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_date__c</fullName>
        <label>Return date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TO__c</fullName>
        <label>TO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Sangli</fullName>
                </value>
                <value>
                    <fullName>Nagpur</fullName>
                </value>
                <value>
                    <fullName>Nashik</fullName>
                </value>
                <value>
                    <fullName>Paris</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>NewYork</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Domestic_Flight</fullName>
        <active>true</active>
        <label>Domestic Flight</label>
    </recordTypes>
    <recordTypes>
        <fullName>International_Flight</fullName>
        <active>true</active>
        <label>International Flight</label>
    </recordTypes>
</CustomObject>